# ChangeLog for net-zope/zope-dublincore
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-dublincore/ChangeLog,v 1.7 2010/09/16 21:47:21 arfrever Exp $

*zope-dublincore-3.8.0 (16 Sep 2010)

  16 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-dublincore-3.6.3.ebuild, +zope-dublincore-3.8.0.ebuild:
  Version bump.

*zope-dublincore-3.6.3 (24 Apr 2010)

  24 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-dublincore-3.6.0.ebuild, +zope-dublincore-3.6.3.ebuild:
  Version bump.

  14 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  zope-dublincore-3.6.0.ebuild:
  Add ~alpha/~sparc wrt #297734

  22 Jan 2010; Brent Baude <ranger@gentoo.org> zope-dublincore-3.6.0.ebuild:
  Marking zope-dublincore-3.6.0 ~ppc for bug 297734

*zope-dublincore-3.6.0 (05 Dec 2009)

  05 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-dublincore-3.5.0.ebuild, +zope-dublincore-3.6.0.ebuild:
  Version bump.

*zope-dublincore-3.5.0 (14 Nov 2009)

  14 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-dublincore-3.5.0.ebuild, +metadata.xml:
  Initial addition. Ebuild written by me.
