@@ -1,4 +1,4 @@
-DIST zope.dublincore-3.8.0.tar.gz 30995 RMD160 2ce0b18990cc74f369d651c6d228e71633bf4995 SHA1 238e37af1d44e5136719220b8d2b3357c99764bd SHA256 10fd8b64295bd4c5c288c75bb45119d322beb0204862ffa2e0ef58c7f5d7f152
-EBUILD zope-dublincore-3.8.0.ebuild 1010 RMD160 5ccf5e45a6b4cfbab9c04a7a32a73b7ed7a63568 SHA1 4eff2e5d134801ef27e46c9570ad8e3a9a5d2e90 SHA256 66fbb685fc3598134b437a2777426b4e2df934d6c6aa586954289da29d9f6349
-MISC ChangeLog 1245 RMD160 333fe7d655e0ee373b0c2729e3d1424075c8d8af SHA1 9ed38b3e0d70184450e265d40465a68d3bcaab21 SHA256 277eb43b8c8365d3726e1fc7f7bb6afe7324c15e864e368cfb372f855fa865aa
+DIST zope.dublincore-3.8.1.zip 55940 RMD160 801f377070a238115793c5c55433460f8f7a19ac SHA1 143049b14cf50bebe85e7dd87b41e85874fc5271 SHA256 a49e15a342bb027b9d806cc5e7f6cea50997b01b8b1758db9308c0c0215eade8
+EBUILD zope-dublincore-3.8.1.ebuild 1032 RMD160 9b845f99ddef13ed85acb3d92555f3e3018882cb SHA1 0996b4f3cd6b40c5f35876aa4b2988c72b627d77 SHA256 14fca97f7b0ab14a1867bb56c247018d77ca6bcfbc6414bd0f6562ba4942d6fa
+MISC ChangeLog 1437 RMD160 e2752de295cc87aebadb55b61e78372fe90de208 SHA1 c7de52a96143eb69a598cfc3a0c63c2f73c42a8d SHA256 7f1d09f429a055c21e010ad3a7f77d5b0d6b4da0002586a020de214014130dae
 MISC metadata.xml 183 RMD160 0e2d86898897ee70cc1f6e9ceb76d00388d3b2fa SHA1 19635a9dfa15036e341a7cbdd8cbd018db62be82 SHA256 f480763451083d2f7be8fc23d38e02952ccc383b4cc65e103a9901a0907ce50d
