@@ -1,6 +1,12 @@
 # ChangeLog for net-zope/zope-dublincore
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-dublincore/ChangeLog,v 1.7 2010/09/16 21:47:21 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-dublincore/ChangeLog,v 1.8 2010/12/19 17:11:10 arfrever Exp $
+
+*zope-dublincore-3.8.1 (19 Dec 2010)
+
+  19 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -zope-dublincore-3.8.0.ebuild, +zope-dublincore-3.8.1.ebuild:
+  Version bump.
 
 *zope-dublincore-3.8.0 (16 Sep 2010)
 
